# opal

./: .gitignore
client/: components.json  package.json  pnpm-lock.yaml  prisma.config.ts
client/app/: globals.css  layout.tsx
client/app/(auth)/: loading.tsx
client/app/(marketing)/: layout.tsx  loading.tsx  page.tsx
client/app/(protected)/: error.tsx  layout.tsx  not-found.tsx
client/app/sso-callback/: loading.tsx  page.tsx
client/components/: chart-area-interactive.tsx  oauth-brand-icons.tsx  section-cards.tsx  sign-in-form.tsx  signup-form.tsx
client/components/contact/: contact-form.tsx  contact-hero.tsx
client/components/global/: container.tsx  icons.tsx  inline-icons.tsx
client/components/layout/: app-sidebar.tsx  notification-bell.tsx  notification-content.tsx
client/components/marketing/: cta.tsx  faq.tsx  features.tsx  hero.tsx  how-it-works.tsx  marketing-gate.tsx  mobile-menu.tsx  navbar.tsx  pricing.tsx
client/constants/: index.ts
client/hooks/: use-auth-redirect.ts
client/lib/: constants.ts  plan-limits.ts  prisma.ts
client/prisma/: schema.prisma
server/: main.py  pyproject.toml
server/app/core/: config.py
server/app/handlers/: installation.py  issue.py  pull_request.py
server/app/inngest/: __init__.py  auto_pr.py  client.py  indexing.py
server/app/models/: schemas.py
server/app/routers/: chat.py  webhooks.py
server/app/services/: embeddings.py  frontend.py  llm.py  vectordb.py
server/app/services/chunker/: languages.py  parser.py
server/app/services/github/: __init__.py  auth.py  pulls.py  repos.py
(+66 files in other folders)
