[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "inngest>=0.5.15",
    "openai>=2.21.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "qdrant-client>=1.17.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-css>=0.25.0",
    "tree-sitter-dockerfile>=0.2.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-json>=0.24.8",
    "tree-sitter-markdown>=0.5.1",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-sql>=0.3.11",
    "tree-sitter-toml>=0.7.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-yaml>=0.7.2",
    "uvicorn[standard]>=0.41.0",
]
